Fixed up some minor issues with the styling on smaller screens

--- a/src/app/_styles/NavBar.module.css
+++ b/src/app/_styles/NavBar.module.css
@@ -4,5 +4,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 816px;
+  margin-left:auto;
+  margin-right: auto;
+  top:0;
+  margin: 0px;
+  width: max(816px, 100vw);
+  position: sticky;
+  z-index: 2
 }
